--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ build-backend = "setuptools.build_meta"
 name = "PyHTTPChat-Client"
 version = "0.01"
 
+[project.dynamic]
+dependencies = ['requests>=2.31.0', 'python-gnupg==0.5.2', 'gnupg==2.3.1', 'setuptools_scm', 'wheel']
+
 [project.urls]
 Homepage = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
