--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,5 @@ build-backend = "setuptools.build_meta"
 [project.dynamic]
 dependencies = ['requests>=2.31.0', 'python-gnupg==0.5.2', 'gnupg==2.3.1', 'setuptools_scm', 'wheel']
 
-[[project.urls]]
+[project.urls]
 Homepage = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
