--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ version = "0.01"
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-[project.dynamic]
+[[project.dynamic]]
 dependencies = ['requests>=2.31.0', 'python-gnupg==0.5.2', 'gnupg==2.3.1', 'setuptools_scm', 'wheel']
 
 [project.urls]
