--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-[[project.dynamic]]
+[project.dynamic]
 version = "0.1.0"
 dependencies = ['requests>=2.31.0', 'python-gnupg==0.5.2', 'gnupg==2.3.1', 'setuptools_scm', 'wheel']
 
