--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,47 +1,37 @@
 [project]
-#install via:
-# $ pip install client-pyhttpchat
-# PyPI link:
-# https://pypi.org/project/client-pyhttpchat/
-
-name = "client-pyhttpchat" 
-version = "0.0.1a"  # Required
+name = "client-pyhttpchat"
+version = "0.0.1a"
 description = "The client for EnvIr0n's pyhttpchatserver"
 readme = "README.md"
 requires-python = ">=3.7"
 license = {file = "LICENSE"}
 keywords = ["HTPP", "chat", "chatclient"]
+
 authors = [
-  {name = "EnvIr0n", email = "envir0n@proton.me" }
+  {name = "EnvIr0n", email = "envir0n@proton.me"}
 ]
 
 maintainers = [
-  {name = "EnvIr0n", email = "envir0n@proton.me" }
+  {name = "EnvIr0n", email = "envir0n@proton.me"}
 ]
 
-classifiers = [  # Optional
+classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Chat Tools",
   "License :: OSI Approved :: GPL v3.0",
-
-  # Specify the Python versions you support here. In particular, ensure
-  # that you indicate you support Python 3. These classifiers are *not*
-  # checked by "pip install". See instead "python_requires" below.
   "Programming Language :: Python :: 3.7"
 ]
 
-
-[project.urls]  # Optional
-"Homepage" = "envir0n.github.io/pyhttpchat/client"
-"Bug Reports" = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
-"Funding" = "none"
-"Say Thanks!" = "none"
-"Source" = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
+[project.urls]
+homepage = "https://envir0n.github.io/pyhttpchat/client"
+bug_reports = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
+funding = "none"
+say_thanks = "none"
+source = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
 
 [project.scripts]
 pychat-run-client = "pychatclient:main"
-
 
 [build-system]
 requires = ["setuptools>=43.0.0", "wheel"]
