--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=43.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "client-pyhttpchat"
 version = "0.0.1a"
@@ -7,32 +11,27 @@ requires-python = ">=3.7"
 license = {file = "LICENSE"}
 keywords = ["HTPP", "chat", "chatclient"]
 
-authors = [
-  {name = "EnvIr0n", email = "envir0n@proton.me"}
-]
+[project.authors]
+name = "EnvIr0n"
+email = "envir0n@proton.me"
 
-maintainers = [
-  {name = "EnvIr0n", email = "envir0n@proton.me"}
-]
+[project.maintainers]
+name = "EnvIr0n"
+email = "envir0n@proton.me"
 
-classifiers = [
-  "Development Status :: 3 - Alpha",
-  "Intended Audience :: Developers",
-  "Topic :: Software Development :: Chat Tools",
-  "License :: OSI Approved :: GPL v3.0",
-  "Programming Language :: Python :: 3.7"
-]
+[project.classifiers]
+Development Status = "3 - Alpha"
+Intended Audience = "Developers"
+Topic = "Software Development :: Chat Tools"
+License = "OSI Approved :: GNU General Public License v3 (GPLv3)"
+Programming Language = "Python :: 3.7"
 
 [project.urls]
-homepage = "https://envir0n.github.io/pyhttpchat/client"
-bug_reports = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
-funding = "none"
-say_thanks = "none"
-source = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
+Homepage = "https://envir0n.github.io/pyhttpchat/client"
+Bug Reports = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
+Funding = "none"
+Say Thanks! = "none"
+Source = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
 
 [project.scripts]
 pychat-run-client = "pychatclient:main"
-
-[build-system]
-requires = ["setuptools>=43.0.0", "wheel"]
-build-backend = "setuptools.build_meta"
