--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,38 @@
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
-
 [project]
-name = "pyhttpchat-client_EnvIr0n"
-version = "0.0.1"
-authors = [
-  { name="EnvIr0n", email="envir0n@proton.me" },
-]
-description = "the client for the python http chat project"
+name = "client-pyhttpchat"
+version = "0.0.1a"
+description = "The client for EnvIr0n's pyhttpchatserver"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.7"
+license = {file = "LICENSE"}
+keywords = ["HTPP", "chat", "chatclient"]
+
+authors = [
+  {name = "EnvIr0n", email = "envir0n@proton.me"}
+]
+
+maintainers = [
+  {name = "EnvIr0n", email = "envir0n@proton.me"}
+]
+
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GPL version 3",
-    "Operating System :: Linux",
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "Topic :: Software Development :: Chat Tools",
+  "License :: OSI Approved :: GPL v3.0",
+  "Programming Language :: Python :: 3.7"
 ]
 
 [project.urls]
-Homepage = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
+homepage = "https://envir0n.github.io/pyhttpchat/client"
+bug_reports = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
+funding = "none"
+say_thanks = "none"
+source = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
+
+[project.scripts]
+pychat-run-client = "pychatclient:main"
+
+[build-system]
+requires = ["setuptools>=43.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
